@@ -2478,7 +2478,7 @@ enum : uint16_t
     STR_WINDOW_OBJECTIVE_MONTHLY_PROFIT = 3306,
     STR_WINDOW_OBJECTIVE_MINIMUM_LENGTH = 3307,
     STR_WINDOW_OBJECTIVE_EXCITEMENT_RATING = 3308,
-    STR_WINDOW_COLOUR_2_COMMA16 = 3309,
+    STR_WINDOW_COLOUR_2_COMMA32 = 3309,
     STR_WINDOW_COLOUR_2_LENGTH = 3310,
     STR_WINDOW_COLOUR_2_COMMA2DP32 = 3311,
     STR_WINDOW_PRESERVATION_ORDER = 3312,
